PR 50518 bad switch